# servant-oauth-server

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  servant-oauth-server.cabal
src/Servant/OAuth/: Grants.hs  JWT.hs  ResourceServer.hs  Server.hs  TokenServer.hs
src/Servant/OAuth/Grants/: Facebook.hs  OpenId.hs
src/Servant/OAuth/ResourceServer/: Types.hs
src/Servant/OAuth/Server/: Facebook.hs  TokenEndpoint.hs
src/Servant/OAuth/TokenServer/: Types.hs
test/: ThingsSpec.hs
