name:                servant-oauth-server
version:             0.1.0.0
synopsis:            OAuth2 bearer token auth and token endpoint for Servant
description:         Defines Servant API combinators which require or check for OAuth2 bearer token authentication (with JWT-encoded tokens), verify, and capture claims.
                     Also includes a token endpoint implementation and utilities for verifying common types of assertion grants (for social login).
homepage:            https://github.com/george-steel/servant-oauth-server#readme
license:             BSD3
license-file:        LICENSE
author:              George Steel
maintainer:          george.steel@gmail.com
copyright:           2018-2019 Satsuma Labs, 2019-2021 George Steel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  exposed-modules:     Servant.OAuth.ResourceServer
                     , Servant.OAuth.ResourceServer.Types
                     , Servant.OAuth.JWT
                     , Servant.OAuth.TokenServer
                     , Servant.OAuth.TokenServer.Types
                     , Servant.OAuth.Grants
                     , Servant.OAuth.Grants.Facebook
  build-depends:       base
                     , unordered-containers
                     , servant
                     , servant-server
                     , wai
                     , text
                     , jose
                     , aeson >= 2
                     , lens
                     , mtl
                     , bytestring
                     , http-api-data
                     , time
                     , http-client
                     , http-types
  default-language:    Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    ThingsSpec
  build-depends:       base
                     , hspec
                     , hspec-wai
                     , servant
                     , servant-oauth-server
                     , servant-server
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/george-steel/servant-oauth-server
