name:                servant-oauth-server
version:             0.1.0.0
synopsis:            OAuth2 bearer token auth and token endpoint for Servant
description:         Defines Servant API combinators which require or check for OAuth2 bearer token authentication (with JWT-encoded tokens), verify, and capture claims.
                     Also includes a token endpoint implementation and utilities for verifying common types of assertion grants (for social login).
homepage:            https://github.com/george-steel/servant-oauth-server#readme
license:             BSD3
license-file:        LICENSE
author:              George Steel
maintainer:          george.steel@gmail.com
copyright:           2018-2019 Satsuma Labs, 2019-2021 George Steel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  exposed-modules:     Servant.OAuth.ResourceServer
                     , Servant.OAuth.ResourceServer.Types
                     , Servant.OAuth.JWT
                     , Servant.OAuth.TokenServer
                     , Servant.OAuth.TokenServer.Types
                     , Servant.OAuth.Grants
                     , Servant.OAuth.Grants.Facebook
                     , Servant.OAuth.Grants.OpenId
  build-depends:       base
                     , aeson >= 2
                     , bytestring
                     , cryptonite >= 0.24
                     , http-api-data
                     , http-client
                     , http-types
                     , jose >= 0.10
                       -- in case jose needs work: know that there is also https://github.com/tekul/jose-jwt
                     , lens
                     , mtl
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , unordered-containers
                     , wai
  default-language:    Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    ThingsSpec
  build-depends:       base
                     , aeson
                     , bytestring
                     , cryptonite
                     , hspec
                     , hspec-wai
                     , http-api-data
                     , http-client
                     , http-types
                     , jose
                     , lens
                     , mtl
                     , servant
                     , servant-oauth-server
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

source-repository head
  type:     git
  location: https://github.com/george-steel/servant-oauth-server
